# statnlp-wrapper

./: CMakeLists.txt  README.md  main.cpp
data/conll2000/: sample_test_1.txt  sample_test_2.txt  sample_test_2485.txt  sample_train_1.txt  sample_train_2.txt  sample_train_2485.txt
src/common/opt/: lbfgs.cpp  lbfgs.h
src/example/LinearCRF/: linear_crf_feature_manager.cpp  linear_crf_feature_manager.h  linear_crf_instance.h  linear_crf_network.cpp  linear_crf_network.h  linear_crf_network_compiler.cpp  linear_crf_nework_compiler.h
src/example/TreeCRF/: Lables.cpp  Lables.h  binary_tree.cpp  binary_tree.h  binary_tree_common.h  cnf_rules.cpp  cnf_rules.h  node.cpp  node.h  tree_crf_feature_manager.cpp  tree_crf_feature_manager.h  tree_crf_instance.cpp  tree_crf_instance.h  tree_crf_network.h  tree_crf_network_compiler.cpp  tree_crf_network_compiler.h  tree_crf_nework_compiler.h
src/hybridnetworks/: builder.h  common.h  data_manager.h  discriminative_network_model.cpp  discriminative_network_model.h  feature_array.cpp  feature_array.h  feature_manager.cpp  feature_manager.h  global_network_param.cpp  global_network_param.h  hypergraph.h  local_network_decoder_thread.cpp  local_network_decoder_thread.h  local_network_learner_thread.cpp  local_network_learner_thread.h  local_network_param.cpp  modification_in_src_files.txt  network.cpp  network.h  network_compiler.cpp  network_compiler.h  network_id_manager.cpp  network_id_manager.h  network_model.cpp  network_model.h  table_lookup_network.cpp  table_lookup_network.h
swig/: CMakeLists.txt  LinearCRF.py  statnlp.i
